--- a/src/components-style/App.css
+++ b/src/components-style/App.css
@@ -1,7 +1,14 @@
+body {
+  height: max-content;
+}
 
+#root {
+  height: max-content;
+}
 .App {
   background-color: #4369b2;
   padding-top: 2rem;
+  min-height: 100%;
 }
 
 img {
